# metamorphfunc

./: README.md  pyproject.toml
notebooks/: 1-mjc-openai-connection.ipynb  1-mjc-openai-connection.py
